--- a/wwr/index.html
+++ b/wwr/index.html
@@ -25,7 +25,7 @@
                 <h1 class ="home-title">Have An Adventure</h1>
                 <h4>Make Memories with Dry Oar </h4>
                 <div class='button-box'>
-                    <a class='book', href="contactus.html">"Book Now"</a>
+                    <a class='book' href="contactus.html">"Book Now"</a>
                 </div>
             </section>
 </div>
@@ -52,7 +52,6 @@
         <a class='join' href="rivers.html">Join Us</a>
     </section>
 </main>
-</body>
 <footer>
     <p>Dry Oar &copy; 2023 - Oluwatobiloba Makinde</p>
     <p><a href="site-plan-rafting.html">Site Plan</a></p>
@@ -69,4 +68,5 @@
         </a>
     </div>
 </footer>
+</body>
 </html>
