--- a/personalportfolio/site-plan.html
+++ b/personalportfolio/site-plan.html
@@ -88,8 +88,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">Aboutme</a>
+        <a href="#">Portfolio</a>
       </nav>
       <hr>
       <h2>
@@ -100,10 +100,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Aboutme <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Portfolio <!-- change this -->
         </div>
 
         <div class="top">
@@ -125,29 +125,39 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        Welcome! My name is Oluwatobiloba Makinde, a dedicated and innovative software developer. From crafting elegant web applications to optimizing complex algorithms, I have a diverse skill set in various programming languages and frameworks. With years of experience in the industry, I'm dedicated to creating robust and user-friendly software solutions.
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/WhatsApp Image 2023-11-04 at 9.07.15 PM.jpeg"portrait">
+        <img src="images/Websitelogo.png" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Aboutme page</h3>
       <p>
-        [Written copy for the Page 2 here]
+        With a deep passion for writing clean and efficient codes while crafting digital solutions that make a difference. With several years of experience in the software development industry, I have honed my skills to create web and mobile applications that are not only functional but also user-friendly and visually appealing.
+
+        My journey in software development began with a fascination for computers and technology, and it quickly evolved into a full-fledged career. I am currently pursuing a Bachelor's degree in Software development and I am committed to lifelong learning to stay up-to-date with the latest technologies and trends in the industry.
+
+        As a developer, I specialize in a variety of programming languages and frameworks, including but not limited to JavaScript, Python, React,and Node.js. I'm also well-versed in database management and cloud technologies, allowing me to build scalable and robust applications.
+
+        I have a comprehensive understanding of both front-end and back-end technologies. I am proficient in various programming languages such as HTML, CSS, JavaScript, and NodeJs as back-end. I have experience in developing dynamic and responsive web pages using modern front-end frameworks such as React or Angular. I am also familiar with databases and have experience in designing and implementing RESTful APIs. I have a strong understanding of software development methodologies and can work collaboratively with a team to deliver high-quality web applications.
+
+        But it's not just about the technical skills; it's also about the ability to understand and translate your vision into a digital reality. I thrive on effective communication and collaboration with clients to ensure that their software needs are met and often exceeded. It's my belief that a successful project isn't just about the code; it's about solving problems and meeting goals.
+
       </p>
-      <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+      <p>Images for the Aboutme page/p>
+        <img src="images/rsz_pexels-miguel-á-padriñán-2882509.jpg" alt="image for about mepage">
+        <img src="images/rsz_3pexels-christina-morillo-1181467.jpg" alt="image for about mepage">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Portfolio page</h3>
       <p>
-        [Written copy for the Page 3 here]
+        Discover a showcase of my work, including web applications, mobile apps, open-source contributions, and side projects. Each project is a testament to my dedication to quality, efficiency, and the pursuit of innovation.
+
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/imageOne.png" alt="image for portfolio page">
+        <img src="images/imageTwo.png" alt="image for portfolio page">
 
       </ul>
       <hr>
