--- a/wwr/faq.html
+++ b/wwr/faq.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Whitewater Rafting Vacations | Dry Oar Boating | FAQ</title>
-    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/style.css" >
   </head>
   <body>
     <div id="content">
       <header>
         <a id="logo_link" href="index.html"
           ><img src="images/logo.png" class="logo" alt="Dry Oar Logo"
-        /></a>
+        ></a>
         <nav>
           <a href="index.html">Home</a>
           <a href="faq.html">FAQ</a>
@@ -21,13 +21,13 @@
       </header>
       <main>
         <h1 class="faq_header">Frequently Asked Questions</h1>
-        <section class="faq">
+        <div class="faq">
           <section class="first">
             <div>
-              <p class="faq_question">
-                <img src="images/icon1.png" alt="icon for icon" />
+              <h3 class="faq_question">
+                <img src="images/icon1.png" alt="icon for icon" >
                 Is this a good trip for kids? What are the age ranges you allow?
-              </p>
+              </h3>
               <p class="faq_text">
                 Absolutely this is a good trip for children of all ages. We have
                 found however that children over the age of 8 seem to enjoy it
@@ -44,11 +44,11 @@
               </p>
             </div>
             <div>
-              <p class="faq_question">
-                <img src="images/icon1.png" alt="icon for icon" />
+              <h3 class="faq_question">
+                <img src="images/icon1.png" alt="icon for icon" >
                 Is whitewater rafting safe? I don't even know how to swim! Can I
                 still come?
-              </p>
+              </h3>
               <p class="faq_text">
                 As with all adventure sports, there is an inherent and assumed
                 element of risk. To help ensure your safety, our guides are all
@@ -64,10 +64,10 @@
               </p>
             </div>
             <div>
-              <p class="faq_question">
-                <img src="images/icon1.png" alt="icon for icon" />
+              <h3 class="faq_question">
+                <img src="images/icon1.png" alt="icon for icon" >
                 What is included in the trip?
-              </p>
+              </h3>
               <p class="faq_text">
                 We will provide all necessary camping equipment. This includes a
                 sleeping bag, foam pad, waterproof duffle bag, small waterproof
@@ -83,10 +83,10 @@
           </section>
           <section class="second">
             <div>
-              <p class="faq_question">
-                <img src="images/icon1.png" alt="icon for icon" />
+              <h3 class="faq_question">
+                <img src="images/icon1.png" alt="icon for icon" >
                 What do I need to bring?
-              </p>
+              </h3>
               <p class="faq_text">
                 The most effective way to plan for temperature and weather
                 changes in the Canyon is to be prepared for both hot & dry and
@@ -119,10 +119,10 @@
               </p>
             </div>
             <div>
-              <p class="faq_question">
-                <img src="images/icon1.png" alt="icon for icon" />
+              <h3 class="faq_question">
+                <img src="images/icon1.png" alt="icon for icon" >
                 What is so great about whitewater rafting anyway?
-              </p>
+              </h3>
               <p class="faq_text">
                 Are you kidding me! What's not great about whitewater
                 rafting!...Let's describe a common day on the river. Arise in
@@ -143,10 +143,10 @@
               </p>
             </div>
             <div>
-              <p class="faq_question">
-                <img src="images/icon1.png" alt="icon for icon" />
+              <h3 class="faq_question">
+                <img src="images/icon1.png" alt="icon for icon" >
                 How far in advance should I book my trip?
-              </p>
+              </h3>
               <p class="faq_text">
                 If you have specific dates you need, we recommend booking a year
                 in advance. If you can be more flexible 6 months in advance is
@@ -154,14 +154,12 @@
               </p>
             </div>
           </section>
-        </section>
+        </div>
 
-        <section class="faq_img">
+        <div class="faq_img">
           <img
             class="faq-banner"
-            src="images/rafting17_600.jpeg"
-            alt="image with people"
-          />
+            src="images/rafting17_600.jpeg" alt="image with people">
 
           <div class="faq-img_text">
             <p class="faq-para">
@@ -171,10 +169,10 @@
               the great outdoors.
             </p>
             <div class="faq-button">
-           <a class="faq-button_link" href="contactus.html">Book Now</a>
-        </div>
+              <a class="faq-button_link" href="contactus.html">Book Now</a>
+            </div>
           </div>
-        </section>
+        </div>
       </main>
       <footer>
         <p>Dry Oar &copy; 2023 - Oluwatobiloba Makinde</p>
@@ -182,13 +180,13 @@
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
           <a href="https://facebook.com" target="_blank">
-            <img src="images/facebook.png" alt="fb icon" />
+            <img src="images/facebook.png" alt="fb icon">
           </a>
           <a href="https://twitter.com" target="_blank">
-            <img src="images/twitter.png" alt="twitter icon" />
+            <img src="images/twitter.png" alt="twitter icon">
           </a>
           <a href="https://instagram.com" target="_blank">
-            <img src="images/instagram.png" alt="instagram icon" />
+            <img src="images/instagram.png" alt="instagram icon">
           </a>
         </div>
       </footer>
