added wireframes to the site

--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -18,3 +18,196 @@
 
 </body></p>
 </html>
+
+
+
+
+<!DOCTYPE html>
+<html lang="en-us">
+    
+  <head>
+    <meta charset="utf-8">
+    <title>Site Plan</title>
+    <link type="text/css" rel="stylesheet" href="styles/site-plan.css">
+  </head>
+
+  <body>
+    <header>
+      <h1>Portfolio Website Site Plan</h1>
+      <h2>Oluwatobiloba Makinde</h2>
+      <h2>WDD 130-C3</h2>
+      <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
+    </header>
+    <main>
+
+      <!-- ------------------------Steps 2-3------------------------------ -->
+      <hr>
+      <h2>Overview</h2>
+      <h3>Purpose</h3>
+      <p>My personal portfolio website aims to serve as a comprehensive showcase of my skills, experiences, and achievements. It will be a dynamic platform where I can present my professional journey, highlight my expertise, and provide tangible evidence of my capabilities to potential employers. Through a well-structured and visually engaging website, I intend to create a compelling narrative about my career, my passion for learning, and my commitment to excellence.</p>  <!-- change this -->
+
+
+      <h3>Audience</h3>
+      <p>The primary audience for my personal portfolio website is prospective employers and industry peers. It will serve as a central hub where employers can gain insight into my qualifications, work history, and the impact I've had in previous roles. Additionally, it will be a resource for colleagues and professionals in my field who want to collaborate, share insights, or simply get to know me better. By providing a user-friendly, informative, and aesthetically appealing website, I aim to leave a lasting impression on those who visit, ultimately securing exciting career opportunities and meaningful professional connections.</p>  <!-- change this -->
+
+      <hr>
+      <h2>Branding</h2>
+      <h3>Website Logo</h3>
+      <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
+      <img src="images/Websitelogo.png" alt="Logo image">
+      <hr>
+      <h2>
+        Style Guide
+      </h2>
+
+      <!-- ------------------------Steps 4-8------------------------------ -->
+
+      <h3>
+        Color Palette
+      </h3>
+      <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in iLearn then return and replace the color codes below with the hex color codes (the 6 digit numbers that show at the bottom of each color) for the colors you have chosen below.  You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
+
+      <!-- Copy and paste the URL to your finished palette below Make sure to paste it into both spots -->
+      Palette URL: <a href="https://coolors.co/palette/789fb7-dbb42c-1b4965-fffff" target="_blank">https://coolors.co/palette/789fb7-dbb42c-1b4965-fffff</a>
+
+
+      <table class="colors">
+        <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
+        <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
+        <tr><td class="primary">[#789fb7]</td><td class="secondary">[#dbb42c]</td><td class="accent1">[#1B4965]</td><td class="accent2">[#fffff]</td></tr>
+      </table>
+
+      <!-- ------------------------Step 9------------------------------ -->
+
+      <h3>
+        Typography
+      </h3>
+      <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
+
+      <h4>
+        Heading Font: DM Serif Text  <!-- change this -->
+      </h4>
+      <h4>
+        Paragraph Font: Open Sans  <!-- change this -->
+      </h4>
+      <h3>
+        Normal paragraph example
+      </h3>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+      <h3>
+        Colored paragraph example
+      </h3>
+      <p class="colored">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+      </p>
+
+      <!-- ------------------------Step 10------------------------------ -->
+
+      <h3>
+        Navigation
+      </h3>
+      <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
+      <nav>
+        <a href="#">Home</a>
+        <a href="#">Aboutme</a>
+        <a href="#">Portfolio</a>
+      </nav>
+      <hr>
+      <h2>
+        Site Map
+      </h2>
+      <div class="sitemap">
+        <div class="sm-home">
+          Home
+        </div>
+        <div class="sm-page2">
+          Aboutme <!-- change this -->
+        </div>
+        <div class="sm-page3">
+          Portfolio <!-- change this -->
+        </div>
+
+        <div class="top">
+          &nbsp;
+        </div>
+        <div class="left">
+          &nbsp;
+        </div>
+        <div class="right">
+          &nbsp;
+        </div>
+
+      </div>
+
+      <!-- --------Content Section -------------- -->
+      <hr>
+      <h2>
+        Content
+      </h2>
+      <h3>Home page</h3>
+      <p>
+        Welcome! My name is Oluwatobiloba Makinde, a dedicated and innovative software developer. From crafting elegant web applications to optimizing complex algorithms, I have a diverse skill set in various programming languages and frameworks. With years of experience in the industry, I'm dedicated to creating robust and user-friendly software solutions.
+      </p>
+      <p>Images for the Home page</p>
+        <img src="images/WhatsApp Image 2023-11-04 at 9.07.15 PM.jpeg"portrait">
+        <img src="images/Websitelogo.png" alt="image for homepage">
+
+      </ul>
+      <h3>Aboutme page</h3>
+      <p>
+        With a deep passion for writing clean and efficient codes while crafting digital solutions that make a difference. With several years of experience in the software development industry, I have honed my skills to create web and mobile applications that are not only functional but also user-friendly and visually appealing.
+
+        My journey in software development began with a fascination for computers and technology, and it quickly evolved into a full-fledged career. I am currently pursuing a Bachelor's degree in Software development and I am committed to lifelong learning to stay up-to-date with the latest technologies and trends in the industry.
+
+        As a developer, I specialize in a variety of programming languages and frameworks, including but not limited to JavaScript, Python, React,and Node.js. I'm also well-versed in database management and cloud technologies, allowing me to build scalable and robust applications.
+
+        I have a comprehensive understanding of both front-end and back-end technologies. I am proficient in various programming languages such as HTML, CSS, JavaScript, and NodeJs as back-end. I have experience in developing dynamic and responsive web pages using modern front-end frameworks such as React or Angular. I am also familiar with databases and have experience in designing and implementing RESTful APIs. I have a strong understanding of software development methodologies and can work collaboratively with a team to deliver high-quality web applications.
+
+        But it's not just about the technical skills; it's also about the ability to understand and translate your vision into a digital reality. I thrive on effective communication and collaboration with clients to ensure that their software needs are met and often exceeded. It's my belief that a successful project isn't just about the code; it's about solving problems and meeting goals.
+
+      </p>
+      <p>Images for the Aboutme page/p>
+        <img src="images/rsz_pexels-miguel-á-padriñán-2882509.jpg" alt="image for about mepage">
+        <img src="images/rsz_3pexels-christina-morillo-1181467.jpg" alt="image for about mepage">
+
+      </ul>
+      <h3>Portfolio page</h3>
+      <p>
+        Discover a showcase of my work, including web applications, mobile apps, open-source contributions, and side projects. Each project is a testament to my dedication to quality, efficiency, and the pursuit of innovation.
+
+      </p>
+      <p>Images for the Page 3</p>
+        <img src="images/imageOne.png" alt="image for portfolio page">
+        <img src="images/imageTwo.png" alt="image for portfolio page">
+
+      </ul>
+      <hr>
+      <h2>
+        Wireframes
+      </h2>
+      <p>
+        Create three wireframes for your site. One for each page and list them here</p>
+
+      <h3>Home</h3>
+      <p>         
+        [Any additional details about home that the wireframe does not make clear]
+      </p>
+      <img src="#" alt="home page wireframe">
+
+      <h3>[Page 2]</h3>
+      <p>         
+        [Any additional details about page 2 that the wireframe does not make clear]
+      </p>
+      <img src="#" alt="page 2 wireframe">
+
+      <h3>[Page 3]</h3>
+      <p>         
+        [Any additional details about page 3 that the wireframe does not make clear]
+      </p>
+      <img src="#" alt="page 3 wireframe">
+    </main>
+  </body>
+
+</html>
