--- a/personalportfolio/site-plan.html
+++ b/personalportfolio/site-plan.html
@@ -125,7 +125,10 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        Welcome! My name is Oluwatobiloba Makinde, a dedicated and innovative software developer. From crafting elegant web applications to optimizing complex algorithms, I have a diverse skill set in various programming languages and frameworks. With years of experience in the industry, I'm dedicated to creating robust and user-friendly software solutions.
+        Greetings, and thank you for visiting my personal portfolio website—a virtual space designed to be a comprehensive testament to my skills, experiences, and achievements in the realm of technology and innovation. This dynamic platform serves a dual purpose: to present my professional journey cohesively and to provide tangible evidence of my capabilities, creating a compelling narrative for prospective employers and industry peers alike.</p>
+      <p>Prospective employers and industry peers, will be drawn by the promise of a detailed and engaging exploration of my professional identity. My website offers a centralized hub where you can gain valuable insights into my qualifications, work history, and the impact I've had in previous roles. The goal is to present a holistic view of who I am as a professional, showcasing not only my technical prowess but also my passion for continuous learning and commitment to excellence.
+        The website offers interactive activities about my educational background, the range and depth of my professional experience, specific skills and technologies I'm proficient in, and examples of projects that demonstrate my problem-solving abilities and innovation. 
+      <p>Thank you for being a part of this virtual exploration, and I look forward to the exciting possibilities that may unfold through our digital interactions.
       </p>
       <p>Images for the Home page</p>
         <img src="images/WhatsApp Image 2023-11-04 at 9.07.15 PM.jpeg"portrait">
@@ -171,19 +174,19 @@
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/homepage.png" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Aboutme</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/Aboutme.png" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>Portfolio</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/portfolio.png" alt="page 3 wireframe">
     </main>
   </body>
 
