added style to personal project

--- a/personalportfolio/index.html
+++ b/personalportfolio/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home page</title>
+    <link rel="stylesheet" href="styles/site-plan.css">
   </head>
-  <body>
+  <body class="container">
     <header>
+      <div class="header-content">
       <div id="logo">
-        <img src="images/Websitelogo.png" alt="logo" />
+        <img src="images/Websitelogo.png" alt="logo">
       </div>
 
       <nav>
@@ -18,28 +20,32 @@
       </nav>
       <div class="social">
         <a href="https://facebook.com" target="_blank">
-          <img src="images/facebook.jpeg"fb icon" />
+          <img class="icon-img" src="images/facebooklogo.jpeg" alt="fb icon">
         </a>
         <a href="https://twitter.com" target="_blank">
-          <img src="images/github.jpeg" alt="Github icon" height="200px"/>
+          <img class="icon-img" src="images/githublogo.jpeg" alt="Github icon">
         </a>
         <a href="https://instagram.com" target="_blank">
-          <img src="images/instagram.jpeg" alt="instagram icon" />
+          <img class="icon-img" src="images/ig.jpeg" alt="instagram icon">
           </a>
-    </div>
+      </div>
+      </div>
     </header>
 
     <main>
         <section class="hero">
+        <div class="hero-text">
             <h1> Welcome! I'm Oluwatobiloba Makinde</h1>
             <p> A dedicated and innovative software developer.From crafting elegant web applications to optimizing complex algorithms, I have a diverse skill set in various programming languages and frameworks. With years of experience in the industry, I'm dedicated to creating robust and user-friendly software solutions.
-            </p></p>
-            <div class="hero-img">
-                <img src="images/WhatsApp Image 2023-11-04 at 9.07.15 PM.jpeg"">
+            </p>
+        </div>
+        <div class="hero-img">
+            <img src="images/tobi.jpeg" alt="">
             </div>
         </section>
-        <section class="cards">
-            <h2>What I do</h2>
+        <section class="entire-card">
+            <h2>What I Do</h2>
+            <div class="cards">
             <div class="card">
                 <h3>WireFraming</h3>
                 <p> I specialize in translating ideas into visual blueprints, meticulously planning the structural foundation of intuitive and user-friendly interfaces. Through wireframes, I bridge creativity with functionality, ensuring a solid framework for the seamless development of engaging digital experiences.</p>
@@ -51,6 +57,7 @@
             <div class="card">
                 <h3>Web development</h3>
                 <p> I thrive on turning intricate concepts into robust, dynamic websites. My expertise lies in coding and problem-solving, dedicated to delivering efficient and seamless online solutions for optimal user experiences.</p>
+            </div>
             </div>
         </section>
     </main>
