updated personal portfolio

--- a/personalportfolio/index.html
+++ b/personalportfolio/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home page</title>
-    <link rel="stylesheet" href="styles/site-plan.css">
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body class="container">
     <header>
@@ -14,9 +14,9 @@
       </div>
 
       <nav>
-        <a href="index.html">Home</a>
-        <a href="aboutme.html">About me</a>
-        <a href="portfolio.html">portfolio</a>
+        <a class="nav-link" href="index.html">Home</a>
+        <a class="nav-link" href="aboutme.html">About me</a>
+        <a class="nav-link" href="portfolio.html">portfolio</a>
       </nav>
       <div class="social">
         <a href="https://facebook.com" target="_blank">
@@ -36,11 +36,13 @@
         <section class="hero">
         <div class="hero-text">
             <h1> Welcome! I'm Oluwatobiloba Makinde</h1>
-            <p> A dedicated and innovative software developer.From crafting elegant web applications to optimizing complex algorithms, I have a diverse skill set in various programming languages and frameworks. With years of experience in the industry, I'm dedicated to creating robust and user-friendly software solutions.
-            </p>
+            <p>
+              Thank you for visiting my personal portfolio website—a virtual space designed to be a comprehensive testament to my skills, experiences, and achievements in the realm of technology and innovation. This dynamic platform serves a dual purpose: to present my professional journey cohesively and to provide tangible evidence of my capabilities, creating a compelling narrative for prospective employers and industry peers alike.</p>
+            <p>Prospective employers and industry peers, will be drawn by the promise of a detailed and engaging exploration of my professional identity. My website offers a centralized hub where you can gain valuable insights into my qualifications, work history, and the impact I've had in previous roles. The goal is to present a holistic view of who I am as a professional, showcasing not only my technical prowess but also my passion for continuous learning and commitment to excellence.
+              The website offers interactive activities about my educational background, the range and depth of my professional experience, specific skills and technologies I'm proficient in, and examples of projects that demonstrate my problem-solving abilities and innovation.</p>
         </div>
         <div class="hero-img">
-            <img src="images/tobi.jpeg" alt="">
+            <img class="hero-image" src="images/tobi.jpeg" alt="">
             </div>
         </section>
         <section class="entire-card">
@@ -63,13 +65,14 @@
     </main>
 
     <footer>
+        <img class="logo-img" src="images/Websitelogo.png" alt="logo" />
         <p> &copy; 2023 Oluwatobiloba Makinde</p>
-        <p><a href="site-plan.html">Site plan</a></p>
+        <p><a class="nav-link" href="site-plan.html">Site plan</a></p>
         <div class="footerlinks">
-        <a href="index.html">Home</a>
-        <a href="aboutme.html">About me</a>
-        <a href="portfolio.html">portfolio</a>
-    </div>
+        <a class="nav-link" href="index.html">Home</a>
+        <a class="nav-link" href="aboutme.html">About me</a>
+        <a class="nav-link" href="portfolio.html">portfolio</a>
+        </div>
     </footer>
   </body>
 </html>
