added sticky footer

--- a/personalportfolio/aboutme.html
+++ b/personalportfolio/aboutme.html
@@ -4,28 +4,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About me page</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
-  <body>
+  <body class="container">
     <header>
+      <div class="header-content">
       <div id="logo">
-        <img src="images/Websitelogo.png" alt="logo" />
+        <img src="images/Websitelogo.png" alt="logo">
       </div>
 
       <nav>
-        <a href="index.html">Home</a>
-        <a href="aboutme.html">About me</a>
-        <a href="portfolio.html">portfolio</a>
+        <a class="nav-link" href="index.html">Home</a>
+        <a class="nav-link" href="aboutme.html">About me</a>
+        <a class="nav-link" href="portfolio.html">portfolio</a>
       </nav>
       <div class="social">
         <a href="https://facebook.com" target="_blank">
-          <img src="images/facebook.jpeg" alt="fb icon" />
+          <img class="icon-img" src="images/facebooklogo.jpeg" alt="fb icon">
         </a>
         <a href="https://twitter.com" target="_blank">
-          <img src="images/github.jpeg" alt="Github icon" />
+          <img class="icon-img" src="images/githublogo.jpeg" alt="Github icon">
         </a>
         <a href="https://instagram.com" target="_blank">
-          <img src="images/instagram.jpeg" alt="instagram icon" />
-        </a>
+          <img class="icon-img" src="images/ig.jpeg" alt="instagram icon">
+          </a>
+      </div>
       </div>
     </header>
 
@@ -76,13 +79,14 @@
     </main>
 
     <footer>
-      <p>&copy; 2023 Oluwatobiloba Makinde</p>
-      <p><a href="site-plan.html">Site plan</a></p>
+      <img class="logo-img" src="images/Websitelogo.png" alt="logo" />
+      <p> &copy; 2023 Oluwatobiloba Makinde</p>
+      <p><a class="nav-link" href="site-plan.html">Site plan</a></p>
       <div class="footerlinks">
-        <a href="index.html">Home</a>
-        <a href="aboutme.html">About me</a>
-        <a href="portfolio.html">portfolio</a>
+      <a class="nav-link" href="index.html">Home</a>
+      <a class="nav-link" href="aboutme.html">About me</a>
+      <a class="nav-link" href="portfolio.html">portfolio</a>
       </div>
-    </footer>
-  </body>
+  </footer>
+</body>
 </html>
