--- a/personalportfolio/site-plan.html
+++ b/personalportfolio/site-plan.html
@@ -124,12 +124,11 @@
         Content
       </h2>
       <h3>Home page</h3>
+      <h1>Welcome! I'm Oluwatobiloba Makinde</h1>
       <p>
-        Greetings, and thank you for visiting my personal portfolio website—a virtual space designed to be a comprehensive testament to my skills, experiences, and achievements in the realm of technology and innovation. This dynamic platform serves a dual purpose: to present my professional journey cohesively and to provide tangible evidence of my capabilities, creating a compelling narrative for prospective employers and industry peers alike.</p>
+        Thank you for visiting my personal portfolio website—a virtual space designed to be a comprehensive testament to my skills, experiences, and achievements in the realm of technology and innovation. This dynamic platform serves a dual purpose: to present my professional journey cohesively and to provide tangible evidence of my capabilities, creating a compelling narrative for prospective employers and industry peers alike.</p>
       <p>Prospective employers and industry peers, will be drawn by the promise of a detailed and engaging exploration of my professional identity. My website offers a centralized hub where you can gain valuable insights into my qualifications, work history, and the impact I've had in previous roles. The goal is to present a holistic view of who I am as a professional, showcasing not only my technical prowess but also my passion for continuous learning and commitment to excellence.
-        The website offers interactive activities about my educational background, the range and depth of my professional experience, specific skills and technologies I'm proficient in, and examples of projects that demonstrate my problem-solving abilities and innovation. 
-      <p>Thank you for being a part of this virtual exploration, and I look forward to the exciting possibilities that may unfold through our digital interactions.
-      </p>
+        The website offers interactive activities about my educational background, the range and depth of my professional experience, specific skills and technologies I'm proficient in, and examples of projects that demonstrate my problem-solving abilities and innovation.</p>
       <p>Images for the Home page</p>
         <img src="images/WhatsApp Image 2023-11-04 at 9.07.15 PM.jpeg"portrait">
         <img src="images/Websitelogo.png" alt="image for homepage">
