--- a/personalportfolio/aboutme.html
+++ b/personalportfolio/aboutme.html
@@ -41,10 +41,7 @@
           experience in the software development industry,
         </p>
         <div class="aboutme-content">
-          <img
-            src="images/rsz_pexels-miguel-á-padriñán-2882509.jpg"
-            alt="image for about me page"
-          />
+          <img src="images/rsz_3pexels-christina-morillo-1181467.jpg" alt="image for about me page">
           <p>
             With several years of experience in the software development industry,I have honed my skills to create web and mobile applications that are not only
             functional but also user-friendly and visually appealing. My journey in software development began with a fascination for computers and
