added style to subpage 2

--- a/personalportfolio/aboutme.html
+++ b/personalportfolio/aboutme.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About me page</title>
     <link rel="stylesheet" href="styles/styles.css">
   </head>
@@ -75,7 +75,7 @@
     </main>
 
     <footer>
-      <img class="logo-img" src="images/Websitelogo.png" alt="logo" />
+      <img class="logo-img" src="images/Websitelogo.png" alt="logo">
       <p> &copy; 2023 Oluwatobiloba Makinde</p>
       <p><a class="nav-link" href="site-plan.html">Site plan</a></p>
       <div class="footerlinks">
